[package]
name = "nanos-sdk-rs"
description = "nanos-world module SDK bindings for Rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Vurv78/nanos-sdk-rs"
readme = "README.md"
keywords = ["nanos", "world", "nanos-world", "lua", "sdk"]
categories = ["game-development", "external-ffi-bindings"]

[dependencies]


[build-dependencies]
bindgen = "0.59.1"